fix Swagger docs for PATCH user & avatar
